--- a/staffpicks.html
+++ b/staffpicks.html
@@ -375,7 +375,7 @@
 </div>
 
 <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Perfect Dark">
-  <img src="PerfectDark.jpg" alt="">
+  <img src="Perfect Dark.jpg" alt="">
   <h3>Perfect Dark</h3>
   <small>Rare</small>
   <div class="card-overlay">
@@ -535,32 +535,60 @@
 </div>
 
       <!-- Film and TV -->
-      <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Cyberpunk Edgerunners">
-        <img src="CP Edgerunners.jpg" alt="">
-        <h3>Cyberpunk Edgerunners</h3>
-        <small>Studio Trigger / CD Projekt</small>
-        <div class="card-overlay">
-          <div class="overlay-content">An anime spinoff of Cyberpunk 2077 with heart and style.</div>
-        </div>
-      </div>
+<div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Blade Runner 2049">
+  <img src="BladeRunner2049.jpg" alt="">
+  <h3>Blade Runner 2049</h3>
+  <small>Denis Villeneuve</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A stunning sequel that expands on the original’s questions of humanity, memory, and freedom. Visually breathtaking and haunting in tone.
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Ghost in the Shell">
-        <img src="Ghost in the Shell.jpg" alt="">
-        <h3>Ghost in the Shell</h3>
-        <small>Mamoru Oshii</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A philosophical dive into cybernetic identity.</div>
-        </div>
-      </div>
+<div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Cyberpunk Edgerunners">
+  <img src="CP Edgerunners.jpg" alt="">
+  <h3>Cyberpunk Edgerunners</h3>
+  <small>Studio Trigger / CD Projekt</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      An anime spinoff of Cyberpunk 2077 with heart and style.
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for PLUTO">
-        <img src="PLUTO.jpg" alt="">
-        <h3>PLUTO</h3>
-        <small>Naoki Urasawa / Netflix</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A noir robot drama reimagining Astro Boy's greatest story arc.</div>
-        </div>
-      </div>
+<div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Ghost in the Shell (1995 film)">
+  <img src="Ghost in the Shell.jpg" alt="">
+  <h3>Ghost in the Shell (1995 film)</h3>
+  <small>Mamoru Oshii</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A philosophical dive into cybernetic identity.
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Ghost in the Shell: Stand Alone Complex">
+  <img src="GITS_SAC.jpg" alt="">
+  <h3>Ghost in the Shell: Stand Alone Complex</h3>
+  <small>Kenji Kamiyama / Production I.G.</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A landmark cyberpunk anime series blending action, politics, and deep dives into consciousness. Major Kusanagi leads Section 9 through tangled webs of tech and power.
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="film" tabindex="0" aria-label="Open details for PLUTO">
+  <img src="PLUTO.jpg" alt="">
+  <h3>PLUTO</h3>
+  <small>Naoki Urasawa / Netflix</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A noir robot drama reimagining Astro Boy's greatest story arc.
+    </div>
+  </div>
+</div>
 
       <!-- Other -->
       <div class="story-card" data-category="other" tabindex="0" aria-label="Open details for Neon_Rising">
