--- a/staffpicks.html
+++ b/staffpicks.html
@@ -380,9 +380,9 @@
   <small>Rare</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      A legendary N64 shooter that blended futuristic espionage with inventive weapons and cyberpunk style. Joanna Dark remains one of the genre’s most iconic protagonists.
+      A remake of the legendary N64 shooter that blended futuristic espionage with inventive weapons and cyberpunk style. Joanna Dark remains one of the genre’s most iconic protagonists.
       <p class="steam-link">
-        <a href="https://www.xbox.com/en-US/games/store/perfect-dark/9nblggh4rqql" target="_blank" rel="noopener noreferrer">Check it out here.</a>
+        <a href="https://www.xbox.com/en-US/games/store/perfect-dark/C0SWGV4560W1/0001" target="_blank" rel="noopener noreferrer">Check it out here.</a>
       </p>
     </div>
   </div>
@@ -536,7 +536,7 @@
 
       <!-- Film and TV -->
 <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Blade Runner 2049">
-  <img src="BladeRunner2049.jpg" alt="">
+  <img src="BLaderunner 2049.jpg" alt="">
   <h3>Blade Runner 2049</h3>
   <small>Denis Villeneuve</small>
   <div class="card-overlay">
@@ -569,7 +569,7 @@
 </div>
 
 <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Ghost in the Shell: Stand Alone Complex">
-  <img src="GITS_SAC.jpg" alt="">
+  <img src="Ghost in the Shell SAC.png" alt="">
   <h3>Ghost in the Shell: Stand Alone Complex</h3>
   <small>Kenji Kamiyama / Production I.G.</small>
   <div class="card-overlay">
