--- a/staffpicks.html
+++ b/staffpicks.html
@@ -536,7 +536,7 @@
 
       <!-- Film and TV -->
 <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Blade Runner 2049">
-  <img src="BLaderunner 2049.jpg" alt="">
+  <img src="BR 2049.jpg" alt="">
   <h3>Blade Runner 2049</h3>
   <small>Denis Villeneuve</small>
   <div class="card-overlay">
