--- a/staffpicks.html
+++ b/staffpicks.html
@@ -600,6 +600,16 @@
         </div>
       </div>
     </div>
+
+          <div class="story-card" data-category="other" tabindex="0" aria-label="Open details for Neon_Rising">
+        <img src="Tokyo.jpg" alt="">
+        <h3>TO:KY:OO</h3>
+        <small>Liam Wong</small>
+        <div class="card-overlay">
+          <div class="overlay-content">A cyberpunk narrative art book blending visuals and lore.</div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Modal (reused for all cards) -->
