--- a/staffpicks.html
+++ b/staffpicks.html
@@ -590,16 +590,28 @@
   </div>
 </div>
 
-      <!-- Other -->
-      <div class="story-card" data-category="other" tabindex="0" aria-label="Open details for Neon_Rising">
-        <img src="Neon Rising.png" alt="">
-        <h3>Neon_Rising</h3>
-        <small>The_Future_is_Now</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A cyberpunk narrative art book blending visuals and lore.</div>
-        </div>
-      </div>
+<!-- Other -->
+<div class="story-card" data-category="other" tabindex="0" aria-label="Open details for Neon_Rising">
+  <img src="Neon Rising.png" alt="">
+  <h3>Neon_Rising</h3>
+  <small>The_Future_is_Now</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A cyberpunk narrative art book blending visuals and lore.
     </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="other" tabindex="0" aria-label="Open details for TO:KY:OO">
+  <img src="Tokyo.png" alt="">
+  <h3>TO:KY:OO</h3>
+  <small>Liam Wong</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A photographic journey through neon-soaked Tokyo nights. Wong’s work captures real-world cyberpunk energy in stunning, cinematic frames.
+    </div>
+  </div>
+</div>
   </section>
 
   <!-- Modal (reused for all cards) -->
