--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
         </div>
 
         <div style="flex: 1 1 300px;">
+        <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Cover Artist</h3>
+        <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
+            <li style="margin-bottom: 0.75rem;"><strong>[Artwork Name]</strong> by [Artist Name]</li>
           <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
           <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
             <li style="margin-bottom: 0.75rem;"><strong>[Artwork Name]</strong> by [Artist Name]</li>
@@ -314,6 +317,7 @@
   </script>
 </body>
 </html>
+
 
 
 
