--- a/stories.html
+++ b/stories.html
@@ -268,40 +268,48 @@
     </div>
   </footer>
 
-  <script>
-    // Mobile nav
-    const hamburger = document.getElementById('hamburger');
-    const nav = document.getElementById('site-nav');
-    hamburger.addEventListener('click', () => {
-      const isActive = nav.classList.toggle('active');
-      hamburger.setAttribute('aria-expanded', isActive ? 'true' : 'false');
-    });
-    nav.querySelectorAll('a').forEach(a => {
-      a.addEventListener('click', () => {
-        if (nav.classList.contains('active')) {
-          nav.classList.remove('active');
-          hamburger.setAttribute('aria-expanded', 'false');
-        }
-      });
-    });
-
-    // Load More
-    (function(){
-      const BATCH_SIZE = 3; // reveal full rows (3-up)
-      const btn = document.getElementById('load-more');
-      const hiddenCards = () => Array.from(document.querySelectorAll('.story-card.is-hidden'));
-
-      function revealBatch() {
-        const batch = hiddenCards().slice(0, BATCH_SIZE);
-        batch.forEach(el => el.classList.remove('is-hidden'));
-        if (hiddenCards().length === 0) btn.style.display = 'none';
+<script>
+  // Mobile nav
+  const hamburger = document.getElementById('hamburger');
+  const nav = document.getElementById('site-nav');
+  hamburger.addEventListener('click', () => {
+    const isActive = nav.classList.toggle('active');
+    hamburger.setAttribute('aria-expanded', isActive ? 'true' : 'false');
+  });
+  nav.querySelectorAll('a').forEach(a => {
+    a.addEventListener('click', () => {
+      if (nav.classList.contains('active')) {
+        nav.classList.remove('active');
+        hamburger.setAttribute('aria-expanded', 'false');
       }
+    });
+  });
 
-      btn.addEventListener('click', revealBatch);
+  // Load More
+  (function(){
+    const btn = document.getElementById('load-more');
+    if (!btn) return;
 
-      // If nothing is hidden (edge case), hide the button
-      if (hiddenCards().length === 0) btn.style.display = 'none';
-    })();
-  </script>
+    const loadMoreRow = btn.closest('.load-more');
+
+    function revealAllAndHide() {
+      // Reveal ALL hidden story cards
+      document.querySelectorAll('.story-card.is-hidden').forEach(el => el.classList.remove('is-hidden'));
+
+      // Hide the button and its row immediately
+      btn.disabled = true;
+      btn.style.display = 'none';
+      if (loadMoreRow) loadMoreRow.style.display = 'none';
+    }
+
+    // Ensure it only ever runs once
+    btn.addEventListener('click', revealAllAndHide, { once: true });
+
+    // If nothing is hidden on load (edge case), hide the row
+    if (document.querySelectorAll('.story-card.is-hidden').length === 0 && loadMoreRow) {
+      loadMoreRow.style.display = 'none';
+    }
+  })();
+</script>
 </body>
 </html>
